--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,7 @@ DATABASE_PORT = 5432
 DATABASE_PASSWORD = admin
 DATABASE_NAME = finance_tracker
 DATABASE_USERNAME = postgres
+
+SECRET_KEY = 12345678
+ALGORITHM = HS256
+EXPIRE_TIME = 30
