--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,7 +6,13 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
+      - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: say Hello!
-        run: echo "Hello!"
+      - name: Install python version 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Update PIP
+        run: python -m pip install --upgrade pip
+      - name: Install all requirements
+        run: pip install -r requirements.txt
