--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,7 +12,7 @@ jobs:
       DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
       SECRET_KEY: ${{secrets.SECRET_KEY}}
       ALGORITHM: ${{secrets.ALGORITHM}}
-      ACCESS_TOKEN_EXPIRE_MINUTES: 160
+      EXPIRE_TIME: 160
     services:
       postgres:
         image: postgres
@@ -28,17 +28,17 @@ jobs:
           --health-retries 5
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
+      - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: setup python
+      - name: Setup python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: update pip
+      - name: Update pip
         run: python -m pip install --upgrade pip
-      - name: install dependencies
+      - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: test with pytest
+      - name: Test with pytest
         run: |
           pip install pytest
           pip install httpx
