--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -59,5 +59,5 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          push: True
+          push: true
           tags: ${{secrets.DOCKER_HUB_USERNAME}}/finance_tracker:latest
