--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -57,7 +57,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
-          context: ./
+          context: .
           file: ./Dockerfile
           push: true
           tags: aleksbesouro/finance_tracker:latest
