--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,9 +1,15 @@
 name: Build and Deploy Code
-
 on: [push, pull_request]
-
+#  push:
+#    branches:
+#      - "main"
+#  pull_request:
+#    branches:
+#      - "test_branch"
 jobs:
   job1:
+#    environment:
+#      name: testing
     env:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
@@ -12,7 +18,7 @@ jobs:
       DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
       SECRET_KEY: ${{secrets.SECRET_KEY}}
       ALGORITHM: ${{secrets.ALGORITHM}}
-      EXPIRE_TIME: 160
+      ACCESS_TOKEN_EXPIRE_MINUTES: 160
     services:
       postgres:
         image: postgres
@@ -28,17 +34,17 @@ jobs:
           --health-retries 5
     runs-on: ubuntu-latest
     steps:
-      - name: Pulling git repo
+      - name: pulling git repo
         uses: actions/checkout@v4
-      - name: Setup python
+      - name: setup python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Update pip
+      - name: update pip
         run: python -m pip install --upgrade pip
-      - name: Install dependencies
+      - name: install dependencies
         run: pip install -r requirements.txt
-      - name: Test with pytest
+      - name: test with pytest
         run: |
           pip install pytest
           pip install httpx
@@ -57,7 +63,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: ${{secrets.DOCKER_HUB_USERNAME}}/finance_tracker:latest
+            context: ./
+            file: ./Dockerfile
+            push: True
+            tags: ${{secrets.DOCKER_HUB_USERNAME}}/finance_tracker:latest
