--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,15 +1,8 @@
 name: Build and Deploy Code
 on: [push, pull_request]
-#  push:
-#    branches:
-#      - "main"
-#  pull_request:
-#    branches:
-#      - "test_branch"
+
 jobs:
   job1:
-#    environment:
-#      name: testing
     env:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
@@ -34,17 +27,21 @@ jobs:
           --health-retries 5
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
+      - name: Pull Git repo
         uses: actions/checkout@v4
-      - name: setup python
+
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: update pip
+
+      - name: Update pip
         run: python -m pip install --upgrade pip
-      - name: install dependencies
+
+      - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: test with pytest
+
+      - name: Test with pytest
         run: |
           pip install pytest
           pip install httpx
@@ -55,9 +52,16 @@ jobs:
         with:
           username: ${{secrets.DOCKER_HUB_USERNAME}}
           password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+      - name: Check Docker Login
+        run: docker info  # Check Docker login success
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Check Buildx Version
+        run: docker buildx version  # Debug Buildx availability
 
       - name: Build and push Docker image
         id: build-and-push
@@ -65,5 +69,8 @@ jobs:
         with:
             context: ./
             file: ./Dockerfile
-            push: True
+            push: true
             tags: ${{secrets.DOCKER_HUB_USERNAME}}/finance_tracker:latest
+
+      - name: Check Docker Configuration
+        run: cat ~/.docker/config.json  # Debug credentials storage
