--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -65,8 +65,5 @@ jobs:
         with:
             context: ./
             file: ./Dockerfile
-            builder: ${{ steps.buildx.outputs.name }}
-            push: True
+            push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/finance_tracker:latest
-            cache-from: type=local,src=/tmp/.buildx-cache
-            cache-to: type=local,dest=/tmp/.buildx-cache
